software/client/senseye_client/compile.log
gcc -O2 -Wall -g -I/usr/local/include/opencv -I../../uclinux/senseye_serv/ senseye_client.c -lopencv_core -lopencv_highgui -lopencv_imgproc -o senseye_client
senseye_client.c:57:37: error: ‘nullptr’ undeclared here (not in a function)
       {"ipaddr", required_argument, nullptr, 'i' },
                                     ^
senseye_client.c: In function ‘main’:
senseye_client.c:72:4: error: unknown type name ‘string’
    string INSIGHT_SERV_ADDR = "";
    ^
senseye_client.c:72:31: warning: initialization makes integer from pointer without a cast [enabled by default]
    string INSIGHT_SERV_ADDR = "";
                               ^
senseye_client.c:75:45: error: ‘longopts’ undeclared (first use in this function)
    while((c= getopt_long(argc, argv, "i:h", longopts, &idx)) != -1){
                                             ^
senseye_client.c:75:45: note: each undeclared identifier is reported only once for each function it appears in
senseye_client.c:78:31: warning: assignment makes integer from pointer without a cast [enabled by default]
             INSIGHT_SERV_ADDR = optarg;
                               ^
senseye_client.c:82:13: error: expected ‘:’ or ‘...’ before ‘fprintf’
             fprintf(stdout, "Provide a valid IP Address of the form xxx.xxx.xx.xxx")
             ^
senseye_client.c:83:13: error: expected ‘;’ before ‘break’
             break;
             ^
senseye_client.c:126:4: warning: passing argument 1 of ‘inet_aton’ makes pointer from integer without a cast [enabled by default]
    inet_aton(INSIGHT_SERV_ADDR, &sockaddr_server.sin_addr);
    ^
In file included from senseye_client.c:19:0:
/usr/include/arpa/inet.h:73:12: note: expected ‘const char *’ but argument is of type ‘int’
 extern int inet_aton (const char *__cp, struct in_addr *__inp) __THROW;
            ^
senseye_client.c: At top level:
senseye_client.c:56:22: warning: ‘long_options’ defined but not used [-Wunused-variable]
 static struct option long_options[] ={
                      ^
make: *** [senseye_client] Error 1
